Adding scraper files to base host project to be able to reflect upon UAP python modules

--- a/cpython/Tools/pyuap/pyuapbackgroundservice/pyuapbackgroundservice.vcxproj
+++ b/cpython/Tools/pyuap/pyuapbackgroundservice/pyuapbackgroundservice.vcxproj
@@ -262,6 +262,15 @@
     <None Include="StartupTask.py">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="ExtensionScraper.py">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="BuiltinScraper.py">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="PythonScraper.py">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
     <None Include="lib.zip">
       <DeploymentContent>true</DeploymentContent>
       <Visible>false</Visible>
