--- a/cpython/Tools/pyuap/pyuapsdk/pyuapsdk.csproj
+++ b/cpython/Tools/pyuap/pyuapsdk/pyuapsdk.csproj
@@ -69,12 +69,24 @@
       <Link>Redist\Retail\x86\Python35.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\Python35_d.dll">
-      <Link>Redist\Debug\x86\Python35_d.dll</Link>
+    <Content Include="$(InputDir)\Win32\_bz2.pyd">
+      <Link>Redist\Retail\x86\_bz2.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\_ctypes.pyd">
+      <Link>Redist\Retail\x86\_ctypes.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\_elementtree.pyd">
+      <Link>Redist\Retail\x86\_elementtree.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\Win32\_socket.pyd">
       <Link>Redist\Retail\x86\_socket.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\pyexpat.pyd">
+      <Link>Redist\Retail\x86\pyexpat.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\Win32\select.pyd">
@@ -85,12 +97,33 @@
       <Link>Redist\Retail\x86\unicodedata.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\_ctypes.pyd">
-      <Link>Redist\Retail\x86\_ctypes.pyd</Link>
+    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
+      <Link>Redist\Retail\x86\pyuapbackgroundservice.dll</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+
+    <Content Include="$(InputDir)\Win32\Python35_d.dll">
+      <Link>Redist\Debug\x86\Python35_d.dll</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\_bz2_d.pyd">
+      <Link>Redist\Debug\x86\_bz2.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\_ctypes_d.pyd">
+      <Link>Redist\Debug\x86\_ctypes.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\_elementtree_d.pyd">
+      <Link>Redist\Debug\x86\_elementtree.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\Win32\_socket_d.pyd">
       <Link>Redist\Debug\x86\_socket.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\Win32\pyexpat_d.pyd">
+      <Link>Redist\Debug\x86\pyexpat.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\Win32\select_d.pyd">
@@ -101,26 +134,11 @@
       <Link>Redist\Debug\x86\unicodedata.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\_ctypes_d.pyd">
-      <Link>Redist\Debug\x86\_ctypes.pyd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
-      <Link>Redist\Retail\x86\pyuapbackgroundservice.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Release\pyuapbackgroundservice.winmd">
-      <Link>Redist\Retail\x86\pyuapbackgroundservice.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
     <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Debug\pyuapbackgroundservice.dll">
       <Link>Redist\Debug\x86\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Debug\pyuapbackgroundservice.winmd">
-      <Link>Redist\Debug\x86\pyuapbackgroundservice.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+
     <!-- 
     x64 
     -->
@@ -128,12 +146,24 @@
       <Link>Redist\Retail\x64\Python35.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\Python35_d.dll">
-      <Link>Redist\Debug\x64\Python35_d.dll</Link>
+    <Content Include="$(InputDir)\amd64\_bz2.pyd">
+      <Link>Redist\Retail\x64\_bz2.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\_ctypes.pyd">
+      <Link>Redist\Retail\x64\_ctypes.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\_elementtree.pyd">
+      <Link>Redist\Retail\x64\_elementtree.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\amd64\_socket.pyd">
       <Link>Redist\Retail\x64\_socket.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\pyexpat.pyd">
+      <Link>Redist\Retail\x64\pyexpat.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\amd64\select.pyd">
@@ -144,12 +174,29 @@
       <Link>Redist\Retail\x64\unicodedata.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\_ctypes.pyd">
-      <Link>Redist\Retail\x64\_ctypes.pyd</Link>
+
+    <Content Include="$(InputDir)\amd64\Python35_d.dll">
+      <Link>Redist\Debug\x64\Python35_d.dll</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\_bz2_d.pyd">
+      <Link>Redist\Debug\x64\_bz2.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\_ctypes_d.pyd">
+      <Link>Redist\Debug\x64\_ctypes.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\_elementtree_d.pyd">
+      <Link>Redist\Debug\x64\_elementtree.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\amd64\_socket_d.pyd">
       <Link>Redist\Debug\x64\_socket.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\amd64\pyexpat_d.pyd">
+      <Link>Redist\Debug\x64\pyexpat.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\amd64\select_d.pyd">
@@ -160,26 +207,15 @@
       <Link>Redist\Debug\x64\unicodedata.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\_ctypes_d.pyd">
-      <Link>Redist\Debug\x64\_ctypes.pyd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
     <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
       <Link>Redist\Retail\x64\pyuapbackgroundservice.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Release\pyuapbackgroundservice.winmd">
-      <Link>Redist\Retail\x64\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Debug\pyuapbackgroundservice.dll">
       <Link>Redist\Debug\x64\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Debug\pyuapbackgroundservice.winmd">
-      <Link>Redist\Debug\x64\pyuapbackgroundservice.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+
     <!-- 
     ARM 
     -->
@@ -187,12 +223,24 @@
       <Link>Redist\Retail\arm\Python35.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\Python35_d.dll">
-      <Link>Redist\Debug\arm\Python35_d.dll</Link>
+    <Content Include="$(InputDir)\arm\_bz2.pyd">
+      <Link>Redist\Retail\arm\_bz2.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\_ctypes.pyd">
+      <Link>Redist\Retail\arm\_ctypes.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\_elementtree.pyd">
+      <Link>Redist\Retail\arm\_elementtree.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\arm\_socket.pyd">
       <Link>Redist\Retail\arm\_socket.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\pyexpat.pyd">
+      <Link>Redist\Retail\arm\pyexpat.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\arm\select.pyd">
@@ -203,12 +251,29 @@
       <Link>Redist\Retail\arm\unicodedata.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\_ctypes.pyd">
-      <Link>Redist\Retail\arm\_ctypes.pyd</Link>
+
+    <Content Include="$(InputDir)\arm\Python35_d.dll">
+      <Link>Redist\Debug\arm\Python35_d.dll</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\_bz2_d.pyd">
+      <Link>Redist\Debug\arm\_bz2.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\_ctypes_d.pyd">
+      <Link>Redist\Debug\arm\_ctypes.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\_elementtree_d.pyd">
+      <Link>Redist\Debug\arm\_elementtree.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\arm\_socket_d.pyd">
       <Link>Redist\Debug\arm\_socket.pyd</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="$(InputDir)\arm\pyexpat_d.pyd">
+      <Link>Redist\Debug\arm\pyexpat.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\arm\select_d.pyd">
@@ -219,26 +284,15 @@
       <Link>Redist\Debug\arm\unicodedata.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\_ctypes_d.pyd">
-      <Link>Redist\Debug\arm\_ctypes.pyd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
     <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
       <Link>Redist\Retail\arm\pyuapbackgroundservice.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Release\pyuapbackgroundservice.winmd">
-      <Link>Redist\Retail\arm\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Debug\pyuapbackgroundservice.dll">
       <Link>Redist\Debug\arm\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Debug\pyuapbackgroundservice.winmd">
-      <Link>Redist\Debug\arm\pyuapbackgroundservice.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+
     <!-- Neutral -->
     <Content Include="..\pyuapbackgroundservice\lib.zip">
       <Link>References\CommonConfiguration\Neutral\lib.zip</Link>
