--- a/cpython/Tools/pyuap/pyuapsdk/DesignTime/CommonConfiguration/Neutral/CPython.targets
+++ b/cpython/Tools/pyuap/pyuapsdk/DesignTime/CommonConfiguration/Neutral/CPython.targets
@@ -99,8 +99,44 @@
     </Task>
   </UsingTask>
 
+  <UsingTask TaskName="UnZip" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll">
+    <ParameterGroup>
+      <InputFileName ParameterType="System.String" Required="true" />
+      <OutputDirectory ParameterType="System.String" Required="true" />
+    </ParameterGroup>
+    <Task>
+      <Reference Include="System.IO.Compression" />
+      <Reference Include="System.IO.Compression.FileSystem" />
+      <Using Namespace="System.IO.Compression" />
+      <Using Namespace="System.IO" />
+      <Code Type="Fragment" Language="cs">
+        <![CDATA[
+        var outputDirectory = new DirectoryInfo(OutputDirectory);
+        var lastZipChangeTime = DateTime.MinValue;
+        
+        if (File.Exists(InputFileName))
+        {
+            lastZipChangeTime = new FileInfo(InputFileName).LastWriteTimeUtc;
+            
+            // Directory is older than the ZIP, so let's go ahead and delete it to force an unzip again
+            if (outputDirectory.Exists && outputDirectory.LastWriteTimeUtc < lastZipChangeTime)
+            {
+                outputDirectory.Delete(true);
+            }
+            
+            if (!outputDirectory.Exists)
+            {
+                ZipFile.ExtractToDirectory(InputFileName, OutputDirectory);
+            }
+        }
+      ]]>
+      </Code>
+    </Task>
+  </UsingTask>
+
   <Target Name="BuildStartupInfo" BeforeTargets="CoreCompile">
     <CreateStartupInfo Arguments="$(PythonArguments)" StartupInfoFile="$(StartupInfoFile)" />
+    <UnZip InputFileName="$(CPythonSDKPath)\References\CommonConfiguration\Neutral\lib.zip" OutputDirectory="$(ProjectDir)\lib.zip" />
   </Target>
   
   <Target Name="CoreCompile" />
