--- a/cpython/Tools/pyuap/pyuapbackgroundservice/pyuapbackgroundservice.vcxproj
+++ b/cpython/Tools/pyuap/pyuapbackgroundservice/pyuapbackgroundservice.vcxproj
@@ -326,6 +326,9 @@
     <ProjectReference Include="..\..\..\PCBuild\winrt\_socket.vcxproj">
       <Project>{b2fbbf74-3e5a-4225-be87-54e54a4f88bc}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\PCbuild\winrt\_ssl.vcxproj">
+      <Project>{5195eec7-59ab-4b59-a53b-83550aea89af}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
