--- a/cpython/PCbuild/python.props
+++ b/cpython/PCbuild/python.props
@@ -35,7 +35,8 @@
     <sqlite3Dir>$(ExternalsDir)sqlite-3.8.3.1\</sqlite3Dir>
     <bz2Dir>$(ExternalsDir)bzip2-1.0.6\</bz2Dir>
     <lzmaDir>$(ExternalsDir)xz-5.0.5\</lzmaDir>
-    <opensslDir>$(ExternalsDir)openssl-1.0.2a\</opensslDir>
+    <opensslDir Condition=" '$(ApplicationTypeRevision)' == '' ">$(ExternalsDir)openssl-1.0.2a\</opensslDir>
+    <opensslDir Condition=" '$(ApplicationTypeRevision)' != '' ">$(ExternalsDir)openssl-winrt\</opensslDir>
     <nasmDir>$(ExternalsDir)\nasm-2.11.06\</nasmDir>
     
     <!-- Suffix for all binaries when building for debug -->
