--- a/cpython/PCbuild/winrt/_ssl.vcxproj
+++ b/cpython/PCbuild/winrt/_ssl.vcxproj
@@ -90,6 +90,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Modules\_ssl.c" />
+    <ClCompile Include="..\..\PC\winrtapi.cpp">
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</CompileAsWinRT>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="pythoncore.vcxproj">
