Adding compilation of winrtapi.cpp to use WinRT extensions for all configurations.

--- a/cpython/PCbuild/winrt/_ssl.vcxproj
+++ b/cpython/PCbuild/winrt/_ssl.vcxproj
@@ -92,6 +92,11 @@
     <ClCompile Include="..\..\Modules\_ssl.c" />
     <ClCompile Include="..\..\PC\winrtapi.cpp">
       <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</CompileAsWinRT>
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</CompileAsWinRT>
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</CompileAsWinRT>
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</CompileAsWinRT>
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</CompileAsWinRT>
+      <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</CompileAsWinRT>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
