Switching from XML to JSON for startup info and debugger params

--- a/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
+++ b/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
@@ -159,6 +159,7 @@
       <CompileAsWinRT>true</CompileAsWinRT>
       <AdditionalIncludeDirectories>..\..\..\Python;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -201,6 +202,7 @@
       <CompileAsWinRT>true</CompileAsWinRT>
       <AdditionalIncludeDirectories>..\..\..\Python;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -245,6 +247,7 @@
       <CompileAsWinRT>true</CompileAsWinRT>
       <AdditionalIncludeDirectories>..\..\..\Python;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -275,7 +278,7 @@
       <DeploymentContent>true</DeploymentContent>
       <Visible>false</Visible>
     </None>
-    <Text Include="startupinfo.xml">
+    <Text Include="startupinfo.json">
       <SubType>Designer</SubType>
     </Text>
   </ItemGroup>
