--- a/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj.filters
+++ b/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj.filters
@@ -44,6 +44,6 @@
     <None Include="PythonScraper.py" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="startupinfo.xml" />
+    <Text Include="startupinfo.json" />
   </ItemGroup>
 </Project>
